--- a/Assignment-3/timing.css
+++ b/Assignment-3/timing.css
@@ -54,42 +54,27 @@ body {
     color: white;
 }
 
-h2 {
-    text-align: center;
-    margin: 50px;
-    color: aliceblue;
-}
 
-.image {
-    margin: 60px;
-}
 
-.first {
-    height: 380px;
-    margin: 30px;
-}
-
-.second {
-    height: 380px;
-    margin: 30px;
-}
-
-.third {
-    height: 380px;
-    margin: 30px;
-}
-
-.fourth {
-    height: 380px;
-    margin: 30px;
-}
-
-.button {
-    text-align: center;
-    font-size: 30px;
+.head {
     color: white;
-
+    text-align: center;
 }
+
+.table {
+    color: white;
+    text-align: center;
+    padding-left: 550px;
+}
+
+.row {
+    color: white;
+    border: solid white;
+    text-align: center;
+    letter-spacing: 4px;
+}
+
+
 
 .copywrite {
     text-align: center;
