--- a/Assignment-3/contact.css
+++ b/Assignment-3/contact.css
@@ -54,42 +54,32 @@ body {
     color: white;
 }
 
-h2 {
-    text-align: center;
-    margin: 50px;
-    color: aliceblue;
-}
-
-.image {
-    margin: 60px;
-}
-
-.first {
-    height: 380px;
-    margin: 30px;
-}
-
-.second {
-    height: 380px;
-    margin: 30px;
-}
-
-.third {
-    height: 380px;
-    margin: 30px;
-}
-
-.fourth {
-    height: 380px;
-    margin: 30px;
-}
-
-.button {
-    text-align: center;
-    font-size: 30px;
+.head {
     color: white;
-
+    text-align: center;
 }
+
+.name {
+    color: white;
+    text-align: center;
+}
+
+.email {
+    color: white;
+    text-align: center;
+}
+
+.box {
+    color: white;
+    text-align: center;
+}
+
+.submit {
+    color: white;
+    text-align: center;
+}
+
+
 
 .copywrite {
     text-align: center;
