--- a/Assisgnment-4/style.css
+++ b/Assisgnment-4/style.css
@@ -56,7 +56,7 @@ li a {
     left: 100px;
     top: 1px;
     border: 2px grey solid;
-    height: 50px;
+    height: 30px;
     text-align: center;
     padding: 10px;
     background-color: orange;
@@ -111,7 +111,7 @@ li a {
     color: white;
 }
 
-.head {
+#head {
     position: absolute;
     top: 600px;
     text-align: center;
@@ -174,7 +174,7 @@ li a {
 
 
 
-.fruithead {
+#fruithead {
     text-align: center;
     position: absolute;
     top: 1100px;
@@ -306,7 +306,7 @@ li a {
     left: 70px;
 }
 
-.name {
+#name {
     position: absolute;
     top: 2600px;
     left: 60px;
