--- a/Assignment-5/style.css
+++ b/Assignment-5/style.css
@@ -309,24 +309,27 @@ justify-content: space-between;
 
 
 .workmain{
-  width: 20%;
+  width: 100%;
+  display: flex;
   
   
 }
 .workmain1{
-  border: 1px solid grey; transform: rotate(90deg);
-  width: 100px;
-  margin-left: 70px;
-  margin-top: 110px;
+  display: inline;
+ ;
+  width: 20%;
+ margin-left: 70px;
+ 
+
+
 
 
 }
-.workmain2{
-  display: flex;
-  flex-direction: column;
-align-items: start;
-  margin-left: 130px;
-  color: white;
-  
 
+.workmain1 li{
+  list-style: none;
+  text-decoration: none;
+}
+.workmainli{
+  border-left: 1px solid grey;
 }
